# https_ws_concept

./: .cproject  .project  CodeFormat.xml  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  web_server.c  web_server.h
spiffs_image/: index.html
spiffs_image/scripts/: worker.js
